tests/paczka1/small_fuzzy/35790463.err
Error in line 1: I3NGkuSPVhi A873 7,6
Error in line 3: CrKfYhePPTK A991 97,6
